--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,6 @@ Repository = "https://github.com/852wa/ComfyUI-ColorshiftColor"
 #  Used by Comfy Registry https://comfyregistry.org
 
 [tool.comfy]
-PublisherId = ""
+PublisherId = "hakoniwa"
 DisplayName = "ComfyUI-ColorshiftColor"
 Icon = ""
